--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
   "devDependencies": {
     "eslint": "^7.4.0",
     "eslint-plugin-react": "^7.20.3"
+  },
+  "dependencies": {
+    "react-native-reanimated": "^1.10.2",
+    "react-native-gesture-handler": "^1.7.0"
   }
 }
