--- a/ExampleProject/package.json
+++ b/ExampleProject/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "restart": "rm -rf node_modules && yarn"
   },
   "dependencies": {
     "react": "16.13.1",
