--- a/package.json
+++ b/package.json
@@ -37,8 +37,5 @@
     "eslint": "^7.4.0",
     "eslint-plugin-react": "^7.20.3"
   },
-  "dependencies": {
-    "react-native-reanimated": "^1.10.2",
-    "react-native-gesture-handler": "^1.7.0"
-  }
+  "dependencies": {}
 }
