--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "eslint": "^7.4.0",
     "eslint-plugin-react": "^7.20.3"
   },
-  "dependencies": {}
+  "peerDependencies": {
+      "react-native-reanimated": "^2",
+      "react-native-gesture-handler": "^2"
+  }
 }
