--- a/package.json
+++ b/package.json
@@ -31,14 +31,16 @@
   "homepage": "https://github.com/heyman333/react-native-animated-numbers/blob/master/README.md",
   "peerDependencies": {
     "react": ">=16.8.0",
-    "react-native": ">=0.59"
+    "react-native": ">=0.59",
+    "react-native-reanimated": ">=2",
+    "react-native-gesture-handler": "1.10.3"
   },
   "devDependencies": {
     "eslint": "^7.4.0",
     "eslint-plugin-react": "^7.20.3"
   },
-  "peerDependencies": {
-      "react-native-reanimated": "^2",
-      "react-native-gesture-handler": "^2"
+  "dependencies": {
+    "react-native-reanimated": "^2.2.4",
+    "react-native-gesture-handler": "^1.10.3"
   }
 }
