--- a/package.json
+++ b/package.json
@@ -31,16 +31,17 @@
   "homepage": "https://github.com/heyman333/react-native-animated-numbers/blob/master/README.md",
   "peerDependencies": {
     "react": ">=16.8.0",
-    "react-native": ">=0.59",
-    "react-native-reanimated": ">=2",
-    "react-native-gesture-handler": "1.10.3"
+    "react-native": ">=0.59"
   },
   "devDependencies": {
-    "eslint": "^7.4.0",
-    "eslint-plugin-react": "^7.20.3"
+    "eslint": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.20.3",
+    "prettier": "^3.2.5",
+    "react-native": "^0.73.6",
+    "react-native-builder-bob": "^0.23.2",
+    "typescript": "^5.2.2"
   },
-  "dependencies": {
-    "react-native-reanimated": "^2.2.4",
-    "react-native-gesture-handler": "^1.10.3"
-  }
+  "dependencies": {}
 }
