--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "react-native-animated-numbers",
   "version": "0.4.1",
-  "main": "index.js",
-  "typings": "index.d.ts",
   "description": "Module that shows number changes through simple animation",
   "scripts": {
     "lint": "yarn eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "bob build"
   },
+  "main": "lib/commonjs/index.js",
+  "module": "lib/module/index.js",
+  "react-native": "src/index.ts",
+  "types": "lib/typescript/src/index.d.ts",
+  "source": "src/index.ts",
+  "files": [
+    "lib",
+    "src"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/heyman333/react-native-animated-numbers"
