--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "react-native": ">=0.59"
   },
   "devDependencies": {
-    "eslint": "^9.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.20.3",
+    "eslint": "^8.51.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "@react-native/eslint-config": "^0.73.1",
     "prettier": "^3.2.5",
     "react-native": "^0.73.6",
     "react-native-builder-bob": "^0.23.2",
