feat: reimplement library with typescript

--- a/ExampleProject/tsconfig.json
+++ b/ExampleProject/tsconfig.json
@@ -1,6 +1,6 @@
 {
-  "extends": "../tsconfig.json",
+  "extends": "../tsconfig",
   "compilerOptions": {
-    "strict": true
+    // Avoid expo-cli auto-generating a tsconfig
   }
 }
