--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-animated-numbers",
-  "version": "0.4.1",
+  "version": "0.6.0",
   "description": "Module that shows number changes through simple animation",
   "scripts": {
     "lint": "yarn eslint .",
@@ -65,5 +65,6 @@
         }
       ]
     ]
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
